# SE-GTR

./: README.md  pyproject.toml
configs/: config.example.yaml
output/analysis/exec/: compile_success_rate.csv  exec_summary.csv  failure_dist.csv  failure_mode_table.csv  qual_report.csv  test_counts_by_project.csv  test_exec_all.csv  validity_gate_success_rate.csv
output/analysis/jacoco/: jacoco_after_summary.csv  jacoco_before_summary.csv  jacoco_coverage_delta.csv
output/analysis/pit/: pit_after_summary.csv  pit_after_summary_intersection.csv  pit_before_summary.csv  pit_before_summary_intersection.csv  pit_coverage_delta_intersection.csv
output/analysis/qual/: qual_smell_domain_summary.csv  qual_smell_failure_clusters.csv  qual_smell_method_cases.csv  qual_smell_patch_patterns.csv  qual_smell_project_summary.csv  qual_smell_report.json  qual_smell_rule_llm_cases.csv  qual_smell_samples.csv  qual_smell_smelltype_cases.csv
output/analysis/smell/: method_success_detail.csv  method_success_rate.csv  method_success_summary.csv  smell_counts.csv  smell_counts_summary.csv  smell_density.csv  (+3 more)
scripts/: baseline_classify.py
scripts/metrics/: common.py
smell_repair/: cli.py  pipeline.py
smell_repair/analysis/: smelly.py
smell_repair/llm/: client.py  evidence.py  prompts.py
smell_repair/project/: ant.py  discover.py  java_extract.py
smell_repair/rules/: deterministic.py  guards.py
smell_repair/utils/: fs.py  log.py
smells/: AC.md  ARPM.md  DS.md  EDED.md  EDIS.md  ENET.md  NARV.md  NASE.md  NNA.md  OIMT.md  TOFA.md  TSES.md  TSVM.md
(+27465 files in other folders)
