[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-smelly-repair"
version = "0.1.0"
description = "LLM-driven repair/refactoring of EvoSuite-generated JUnit4 tests using Smelly warnings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "requests>=2.31.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["smell_repair*"]
